--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/github.webp" />
+    <link rel="icon" href="/airmiles.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template Project</title>
+    <title>JSON Web Token</title>
   </head>
   <body>
     <div id="root"></div>
